Completed Phase 04 Bootcamp
Phase 04 Bootcamp

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "NLW Bootcamp 3",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/server.js"
   },
   "author": "Chu",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "hbs": "^4.1.1",
+    "nodemon": "^2.0.6"
   }
 }
